# SIYI_A8mini_onboard

./: CMakeLists.txt  README.md  Readme.md  config_path.yaml  install_opencode.sh  run.sh
A_params/: WorldPoints_BasedOn_camera_img.yaml  camera_K.yaml  zoom_correspond.csv
A_params/onnx_model/: onnx_1.onnx
include/: TargetTracker.hpp  camera_module.hpp  data_logger.hpp  data_manager.hpp  data_types.hpp  gimbal_module.hpp  target_state_Filter.hpp  target_state_Predictor.hpp  uav_module.hpp  vision_onnx_aruco.hpp
modules/: TargetTracker.cpp  camera_module.cpp  data_logger.cpp  data_manager.cpp  gimbal_module.cpp  target_state_Filter.cpp  target_state_Predictor.cpp  uav_module.cpp  vision_onnx_aruco.cpp
other/: vision_onnx_aruco_ori.cpp  vision_onnx_aruco_ori.hpp  vision_onnx_onnx.cpp  vision_onnx_onnx.hpp  vision_onnx_qr.cpp  vision_onnx_qr.hpp
py/: 1.py
src/: Confirm_delay_time.cpp  Confirm_delay_time2.cpp  main_multi_thread.cpp
test/: Kalman.cpp  Kalman.py  cam_pipeline.cpp  connetc2video.py  draw.py  draw_trace_compare.py  extract_board.py  test_gimbal.cpp  test_kalman.cpp  tracking_result.csv  visual.py
